tests/should_fail/logic_alias/alias_to_extern_crate_item.rs
extern crate creusot_std;

use creusot_std::prelude::*;

#[logic_alias(Int::lt(&x@, &y@))]
pub fn lt(x: i64, y: i64) -> bool {
    x < y
}
