tests/should_fail/logic_alias/alias_to_extern_crate_item.stderr
error: The logic function must be defined in the same crate as the aliased program function.
 --> alias_to_extern_crate_item.rs:5:1
  |
5 | #[logic_alias(Int::lt(&x@, &y@))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: function defined here
 --> alias_to_extern_crate_item.rs:6:1
  |
6 | pub fn lt(x: i64, y: i64) -> bool {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
 --> creusot-std/src/logic/int.rs:285:4
  = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

